Let a reading answer from the measurement's own shape
A measure sits at a location, and a location may be measured at several numbers.
`Readings` held neither: it was one map per row, keyed by the measure, and every
consumer put the two back together — `coverageOf` walked the partitioning for a
location and looked its measures up in the readings, `pairsOf` indexed the rows'
maps by axes it was handed, `whyUnclassified` was given the order to walk in. A
caller with a measure in hand asked the readings about it, and a measure of
another measurement is a lookup that misses: the count comes back nought, which
reads as a class no row reached rather than as a question about somebody else's
input.

So the reading keeps the shape it was made from. `MeasuredInput.measurements()`
answers with a location and what was measured there, and the two axis
projections are that flattened rather than a second list beside it; `Readings`
is one entry per location, each holding what the rows came to at each measure
there — the classes they reached, how many could not say, and one reason per
kind. What a row said at each measure is kept in the order the measures were
walked, so the pairs read it by position and never by name.

The consumers traverse those entries. `coverageOf` takes the location and the
measure the walk is at, `pairsOf` reads the flattening the reading itself
produces, and why the rows could not be placed is the reading's own answer over
its own entries. `couldNotSay(Axis)`, `classesIn(where, axis)` and
`stoppedAt(where, axis)` are gone with the lookup they served.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>